etc/kubernetes/manifests/hasher-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hasher-po
spec:
  containers:
    -
      args:
        - hasher.rb
      command:
        - /usr/local/bin/ruby
      image: ganimedescolomar/dockercoins-2:2021-09-hasher
      name: hasher-container
      ports:
        -
          containerPort: 8080
          protocol: TCP
      resources:
        limits:
          cpu: 100m
          memory: 100M
        requests:
          cpu: 100m
          memory: 100M
      volumeMounts:
        -
          mountPath: /app/
          name: public
          readOnly: true
      workingDir: /app/
  volumes:
    -
      emptyDir:
        medium: Memory
        sizeLimit: 10M
      name: private
    -
      emptyDir:
        medium: Memory
        sizeLimit: 1M
      name: public
