etc/kubernetes/manifests/rng-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng-deploy
  namespace: dockercoins
spec:
  selector:
    matchLabels:
      app: dockercoins-rng
  replicas: 3
  template:
    metadata:
      labels:
        app: dockercoins-rng
    spec:
      containers:
        - name: rng-container
          args:
            - rng.py
          command:
            - python
          image: academiaonline/simplilearn-dockercoins:latest-rng
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 100M
              cpu: 100m
            requests:
              memory: 100M
              cpu: 100m
          volumeMounts:
            - name: rng-volume
              mountPath: /app/rng.py
              subPath: rng.py
              readOnly: true
          workingDir: /app/
      volumes:
        - name: rng-volume
          configMap:
            name: rng-cm
            items:
              - key: rng.py
                path: rng.py
