etc/kubernetes/manifests/rng-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rng-po
spec:
  containers:
    -
      args: 
        - rng.py
      command:
        - python
      image: academiaonline/simplilearn-dockercoins:latest-rng
      livenessProbe:
        tcpSocket:
          port: 8080
      name: rng-container
      ports:
        -
          containerPort: 8080
          protocol: TCP
      resources:
        limits:
          cpu: 100m
          memory: 100M
        requests:
          cpu: 100m
          memory: 100M
      volumeMounts:
        -
          mountPath: /app/
          name: public
          readOnly: true
      workingDir: /app/
  volumes:
    -
      emptyDir:
        medium: Memory
        sizeLimit: 1M
      name: public
