etc/kubernetes/manifests/webui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dockercoins-webui
  template:
    metadata:
      labels:
        app: dockercoins-webui
    spec:
      containers:
        - name: webui-container
          args:
            - webui.js
          command:
            - node
          image: academiaonline/simplilearn-dockercoins:latest-webui
          port:
            - containerPort: 8080
          resources:
            limits:
              memory: 100M
              cpu: 100m
            requests:
              memory: 100M
              cpu: 100m
          volumeMounts:
            - mountPath: /src/
              name: webui-volume
              readOnly: true
          workingDir: /app/webui/
      volumes:
        -
          name: webui-volume
          emptyDir: {}
