etc/kubernetes/manifests/hasher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
  namespace: dockercoins
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: dockercoins-hasher
