etc/kubernetes/manifests/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dockercoins
spec:
  selector:
    app: dockercoins-redis
  ports:
    - 
      port: 6379
      protocol: TCP
      targetPort: 6379
