etc/kubernetes/manifests/rng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng
  namespace: dockercoins
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: dockercoins-rng
