etc/kubernetes/manifests/webui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  selector:
    name: webui-rc
  ports:
    - 
      port: 8080
      protocol: TCP
      targetPort: 8080
