etc/kubernetes/manifests/worker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-svc
  namespace: dockercoins
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: dockercoins-worker
