etc/kubernetes/manifests/worker-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-netpol
  namespace: dockercoins
spec:
  podSelector:
    matchLabels:
      app: dockercoins-worker
  ingress:
